--- a/my-react/src/index.css
+++ b/my-react/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -16,6 +20,15 @@
 * {
   padding: 0;
   margin: 0;
+  outline: none;
+}
+
+input {
+  padding: 5px 10px;
+  color: red;
+  font-size: 14px;
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
 
 a {
@@ -50,6 +63,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-top: 10px;
 }
 button:hover {
   border-color: #646cff;
